base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: debmirror
  name: debmirror-service
spec:
  ports:
  - name: debian-mirror-port
    port: 80
    protocol: TCP
  selector:
    component: http
status:
  loadBalancer: {}
